--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.10.5",
     "axios": "^1.2.4",
     "framer-motion": "^8.5.3",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-leaflet": "^4.2.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/leaflet": "^1.9.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
