--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/leaflet": "^1.9.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-leaflet": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "@vitejs/plugin-react": "^3.0.0",
