--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+dist
+dist-ssr
 *.local
 
 # Editor directories and files
@@ -20,4 +22,4 @@ node_modules
 *.njsproj
 *.sln
 *.sw?
-.eslintrc.json
+.eslintrc.jsondist/
