--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     },
     "extends": [
         "plugin:react/recommended",
+        "plugin:react-hooks/recommended",
         "standard"
     ],
     "parser": "@typescript-eslint/parser",
@@ -18,6 +19,7 @@
     },
     "plugins": [
         "react",
+				"react-hooks",
         "@typescript-eslint"
     ],
     "rules": {
